# attendance

./: Dockerfile  README.md  docker-compose.yml  licence.txt  pyproject.toml  requirements.txt
attendance/: hooks.py
attendance/config/: __init__.py
attendance/sync/: mssql.py
